add react to footer links

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -77,34 +77,29 @@
               Favourite <span class="text-white">Links</span>
             </dt>
             <dd class="col-6">
+              <a
+                class="footer__nav-link"
+                rel="nofollow"
+                target="_blank"
+                href="https://reactjs.org/"
+              >
+                React
+              </a>
+            </dd>
+            <dd class="col-6">
               <a class="footer__nav-link" rel="nofollow" href="https://angular.io/" target="_blank"
                 >Angular</a
               >
             </dd>
             <dd class="col-6">
-              <a class="footer__nav-link" rel="nofollow" href="https://rxjs.dev/" target="_blank"
-                >RxJs</a
-              >
-            </dd>
-            <dd class="col-6">
-              <a
-                class="footer__nav-link"
-                rel="nofollow"
-                target="_blank"
-                href="https://material.angular.io/"
-              >
+              <a class="footer__nav-link" rel="nofollow" target="_blank" href="https://mui.com/">
                 Material
               </a>
             </dd>
             <dd class="col-6">
-              <a
-                class="footer__nav-link"
-                rel="nofollow"
-                target="_blank"
-                href="https://ngxs.gitbook.io/ngxs/"
+              <a class="footer__nav-link" rel="nofollow" href="https://rxjs.dev/" target="_blank"
+                >RxJs</a
               >
-                NGXS
-              </a>
             </dd>
             <dd class="col-6">
               <a
