tighten up margin around things i do component

--- a/src/app/features/home/components/things-i-do/things-i-do.component.html
+++ b/src/app/features/home/components/things-i-do/things-i-do.component.html
@@ -5,8 +5,8 @@
         Things <span class="text-tertiary">I</span> Do <span class="text-tertiary">Well</span>
       </h4>
       <p class="text-center pb-5">
-        I have a wide range of skills in front end development. Here are the core technologies I work with on a daily
-        basis.
+        I have a wide range of skills in front end development. Here are the core technologies I
+        work with on a daily basis.
       </p>
     </div>
   </div>
@@ -19,10 +19,11 @@
         [size]="'8x'"
       ></fa-icon>
       <div class="flex-row">
-        <h5>Javascript</h5>
+        <h5 class="m-0">Javascript</h5>
         <p class="m-0">
-          I write object oriented javascript code that's both cross browser and cross platform compatible using native
-          vanilla javascript or any of the modern frameworks such as angular.
+          I write object oriented javascript code that's both cross browser and cross platform
+          compatible using native vanilla javascript or any of the modern frameworks such as
+          angular.
         </p>
       </div>
     </div>
@@ -33,10 +34,10 @@
         [size]="'8x'"
       ></fa-icon>
       <div class="flex-row">
-        <h5>CSS3</h5>
+        <h5 class="m-0">CSS3</h5>
         <p class="m-0">
-          I like to write cross browser object oriented CSS code. This encourages code reuse and, ultimately, faster and
-          more efficient stylesheets that are easier to add to and maintain.
+          I like to write cross browser object oriented CSS code. This encourages code reuse and,
+          ultimately, faster and more efficient stylesheets that are easier to add to and maintain.
         </p>
       </div>
     </div>
@@ -47,10 +48,10 @@
         [size]="'8x'"
       ></fa-icon>
       <div class="flex-row">
-        <h5>HTML5</h5>
+        <h5 class="m-0">HTML5</h5>
         <p class="m-0">
-          I write semantic and meaningful markup that is documented and easy to read. This means it can be maintained
-          and scaled in the future, and allows co-workers to quickly pick it up.
+          I write semantic and meaningful markup that is documented and easy to read. This means it
+          can be maintained and scaled in the future, and allows co-workers to quickly pick it up.
         </p>
       </div>
     </div>
@@ -59,8 +60,8 @@
   <div class="row">
     <div class="col-12">
       <p class="text-center capabilities">
-        Or visit <a [routerLink]="['/my-skills']">my skills</a> page for a full breakdown of my capabilities as a front
-        end developer.
+        Or visit <a [routerLink]="['/my-skills']">my skills</a> page for a full breakdown of my
+        capabilities as a front end developer.
       </p>
     </div>
   </div>
