--- a/src/app/features/home/components/featured-work/featured-work.component.html
+++ b/src/app/features/home/components/featured-work/featured-work.component.html
@@ -10,15 +10,18 @@
   <div class="featured-work__bg">
     <article class="container">
       <div class="row d-flex justify-content-center">
-        <div *ngFor="let i of featuredWork" class="col-sm-12 col-md-6 col-lg-4 d-flex justify-content-center">
+        <div
+          *ngFor="let i of featuredWork"
+          class="col-sm-12 col-md-6 col-lg-4 d-flex justify-content-center"
+        >
           <a
             [attr.data-fancybox]="'gallery'"
             [attr.data-title]="i.caption"
-            href="/assets/images/portfolio/{{ i.imageName }}.jpg"
+            href="/assets/images/portfolio/{{ i.imageName }}"
             class="featured-work__client-link mb-5 mb-md-0"
           >
             <img
-              src="/assets/images/portfolio/{{ i.imageName }}.jpg"
+              src="/assets/images/portfolio/{{ i.imageName }}"
               class="featured-work__client-img"
               alt="{{ i.caption }}"
             />
