--- a/src/app/features/home/components/featured-work/featured-work.component.html
+++ b/src/app/features/home/components/featured-work/featured-work.component.html
@@ -17,11 +17,11 @@
           <a
             [attr.data-fancybox]="'gallery'"
             [attr.data-title]="i.caption"
-            href="/assets/images/portfolio/{{ i.imageName }}"
+            href="/assets/images/portfolio/{{ i.imageName }}.jpg"
             class="featured-work__client-link mb-5 mb-md-0"
           >
             <img
-              src="/assets/images/portfolio/{{ i.imageName }}"
+              src="/assets/images/portfolio/{{ i.imageName }}.jpg"
               class="featured-work__client-img"
               alt="{{ i.caption }}"
             />
