--- a/src/app/features/home/components/intro/intro.component.html
+++ b/src/app/features/home/components/intro/intro.component.html
@@ -4,10 +4,10 @@
     <span class="text-tertiary">FRONT END</span> WEB <span class="text-tertiary">DEVELOPER</span>.
   </h1>
   <p class="text-center">
-    I have <app-years-of-experience></app-years-of-experience> years solid industry experience and
-    I'm available for <a [routerLink]="['/contact-me']">hire</a> as a full time front end developer
-    on a contract basis. Welcome to my online
+    Welcome to my online
     <a [routerLink]="['/portfolio']">portfolio</a> designed to showcase examples of my work and the
-    different <a [routerLink]="['/my-skills']">skills</a> I have acquired along the way.
+    different <a [routerLink]="['/my-skills']">skills</a> I have acquired along the way. I have
+    <app-years-of-experience></app-years-of-experience> years solid industry experience and I'm
+    available for <a [routerLink]="['/contact-me']">hire</a>.
   </p>
 </div>
